{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 267,
  "lineage": "a0027298-3ad9-9f57-84d1-31fbb99b339e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097a2df4ac947655f",
            "arn": "arn:aws:ec2:us-east-2:405378853534:instance/i-08fe1dbf8d2e3abc9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08fe1dbf8d2e3abc9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gui-terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0117dde1567938f55",
            "private_dns": "ip-172-31-45-123.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.123",
            "public_dns": "ec2-18-118-29-2.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.29.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0354fc1af7038692e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20221123224856289700000001",
              "terraform-20221123224856290700000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fee30151d0af0e5",
            "tags": {
              "Name": "gui-ec2-ansible-0"
            },
            "tags_all": {
              "Name": "gui-ec2-ansible-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033b6a2c278d0cc48",
              "sg-034829b7a4536b978"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_acesso_ssh_publico",
            "aws_security_group.sg_acesso_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name_of_resource_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097a2df4ac947655f",
            "arn": "arn:aws:ec2:us-east-2:405378853534:instance/i-006278c23e9d475b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006278c23e9d475b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gui-terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-049892fc233088d21",
            "private_dns": "ip-172-31-39-112.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.112",
            "public_dns": "ec2-18-219-200-250.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.200.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0a110d4f9d98616",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20221123224856289700000001",
              "terraform-20221123224856290100000002",
              "terraform-20221123224856290700000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fee30151d0af0e5",
            "tags": {
              "Name": "gui-ec2-0"
            },
            "tags_all": {
              "Name": "gui-ec2-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033b6a2c278d0cc48",
              "sg-034829b7a4536b978",
              "sg-0b8bdd734e4d124e2"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_acesso_nginx",
            "aws_security_group.sg_acesso_ssh_publico",
            "aws_security_group.sg_acesso_web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097a2df4ac947655f",
            "arn": "arn:aws:ec2:us-east-2:405378853534:instance/i-0022ed04715e4edb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0022ed04715e4edb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gui-terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2849fd882d583c4",
            "private_dns": "ip-172-31-47-30.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.30",
            "public_dns": "ec2-3-137-136-24.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.136.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0013c61f3ad3d1097",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20221123224856289700000001",
              "terraform-20221123224856290100000002",
              "terraform-20221123224856290700000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fee30151d0af0e5",
            "tags": {
              "Name": "gui-ec2-1"
            },
            "tags_all": {
              "Name": "gui-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033b6a2c278d0cc48",
              "sg-034829b7a4536b978",
              "sg-0b8bdd734e4d124e2"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_acesso_nginx",
            "aws_security_group.sg_acesso_ssh_publico",
            "aws_security_group.sg_acesso_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_acesso_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:security-group/sg-0b8bdd734e4d124e2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b8bdd734e4d124e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20221123224856290100000002",
            "name_prefix": "terraform-",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gui-sg_acesso_ssh_publico"
            },
            "tags_all": {
              "Name": "gui-sg_acesso_ssh_publico"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4b5b4b064fbfb80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_acesso_ssh_publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:security-group/sg-033b6a2c278d0cc48",
            "description": "libera porta ssh para internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "porta SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033b6a2c278d0cc48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "porta SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221123224856290700000003",
            "name_prefix": "terraform-",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gui-sg_acesso_ssh_publico"
            },
            "tags_all": {
              "Name": "gui-sg_acesso_ssh_publico"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4b5b4b064fbfb80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_acesso_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:security-group/sg-034829b7a4536b978",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-034829b7a4536b978",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221123224856289700000001",
            "name_prefix": "terraform-",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gui-sg_acesso_ssh_publico"
            },
            "tags_all": {
              "Name": "gui-sg_acesso_ssh_publico"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4b5b4b064fbfb80"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}